@@ -31,6 +31,7 @@ setup(name='Products.ATContentTypes',
           'setuptools',
           'plone.i18n',
           'plone.memoize',
+          'plone.navigation',
           'plone.app.layout',
           'zope.component',
           'zope.i18nmessageid',
